; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/examples/extr_gifdec.c_GIFDisposeFrame.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/examples/extr_gifdec.c_GIFDisposeFrame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.WebPPicture = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GIFDisposeFrame(i32 %0, i32* %1, %struct.WebPPicture* %2, %struct.WebPPicture* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.WebPPicture*, align 8
  %8 = alloca %struct.WebPPicture*, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store %struct.WebPPicture* %2, %struct.WebPPicture** %7, align 8
  store %struct.WebPPicture* %3, %struct.WebPPicture** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32*, i32** %6, align 8
  %11 = load %struct.WebPPicture*, %struct.WebPPicture** %7, align 8
  %12 = load %struct.WebPPicture*, %struct.WebPPicture** %8, align 8
  %13 = call i32 (...) @ErrorGIFNotAvailable()
  ret void
}

declare dso_local i32 @ErrorGIFNotAvailable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
